# TorchCAP

./: .gitignore  Dockerfile  README.md  profile_cluster.sh  pyproject.toml  requirements.txt
configs/: a5000_24g_gala1.json
examples/huggingface/: hf_utils.py  run.sh  run_docker.sh  test_multi_gpu.py  test_single_gpu.py
examples/torchtitan/: run_train.sh  train.py
tests/: common.py  run_dist_test.sh  run_test.sh  test_api.py  test_cluster_env.py  test_hop.py  test_sharding.py  test_sharding_strategy.py
torchcap/: __init__.py  api.py  backends.py  cluster_env.py  common.py  fx_utils.py  logging_utils.py  sharding.py  utils.py
torchcap/cost_model/: __init__.py  comm_model.py  cost_model.py  flop_counter.py  memory.py  memory_estimator.py  runtime_estimator.py
torchcap/passes/: shard_parallel.py  tensor_parallel.py  utils.py
torchcap/solver/: __init__.py  auto_sharding_strategy.py  parallel_solver.py  pybind_solver.cc  pybind_solver.py  sharding_strategy.py  solver.py
